# streamrecorder

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  next.config.ts  package-lock.json  package.json  testing_strategy.md  tsconfig.cli.json  tsconfig.cli.tsbuildinfo  tsconfig.tsbuildinfo  vitest.config.ts
src/: instrumentation.ts  main.rs  recorder.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/__tests__/: api.test.ts
src/app/api/logs/: route.ts
src/app/api/recordings/: route.ts
src/app/api/settings/: route.ts
src/app/api/stats/: route.ts
src/app/api/streamers/: route.ts
src/app/components/: activity-logs.tsx  recent-recordings.tsx  sidebar.tsx  stats-cards.tsx  streamers-list.tsx
src/app/monitor/: page.tsx
src/app/recordings/: page.tsx
src/app/recordings/[id]/: page.tsx
src/app/settings/: page.tsx
src/app/streamers/: page.tsx
src/cli/: index.ts
src/cli/commands/: recordings.ts  service.ts  stats.ts  streamers.ts
src/components/ui/: button.tsx
src/lib/: db.ts  server-init.ts
src/lib/models/: index.ts  recording-log.ts  recording.ts  settings.ts  stats.ts  streamer.ts
src/lib/models/__tests__/: recording-log.test.ts  recording.test.ts  settings.test.ts  stats.test.ts  streamer.test.ts
src/lib/services/: auto-recording-service.ts  recording-service.ts
src/lib/services/__tests__/: recording-service.test.ts
src/lib/utils/: disk-space.ts
tests/: db-mock.ts  setup.ts
tests/integration/: recording-lifecycle.test.ts
tests/utils/: mock-request.ts  mock-streamlink.ts  test-db.ts
(+10 files in other folders)
