[package]
name = "streamlink_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.26", features = ["full"] }
reqwest = { version = "0.11", features = ["json","stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
urlencoding = "2.1"
rand = "0.8"